--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ website name
 </Title>  
 </Head>  
 <h1>welcome to Akash Ramagiri's website </h1>
-<Body background="image1">   
+<Body background="image1.jpeg">   
   
 </Body>  
 </Html>
