--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@ h1 {padding: 270px 0;
 website name  
 </Title>  
 </Head>  
-<h1>welcome to Akash Ramagiri's website </h1>
+<h1> HELLO WORLD! </h1>
+<h2> welcome to AKASH RAMAGIRI's website </h2>
+<h3> Introducing you a new way of exploring the world </h3>
+<h4> AR in TOURISM </h4>
+<h5> stay tuned COMING SOON! </h5>
 <Body background="image2.jpeg">   
   
 </Body>  
