--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ h1 {padding: 270px 0;
 website name  
 </Title>  
 </Head>  
-<h1> HELLO WORLD! </h1>
-<h2> welcome to AKASH RAMAGIRI's website </h2>
-<h3> Introducing you a new way of exploring the world </h3>
-<h4> AR in TOURISM </h4>
-<h5> stay tuned COMING SOON! </h5>
+<h1> HELLO WORLD! 
+welcome to AKASH RAMAGIRI's website 
+ Introducing you a new way of exploring the world 
+ AR in TOURISM 
+ stay tuned COMING SOON!</h1>
 <Body background="image2.jpeg">   
   
 </Body>  
