--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ website name
 </Title>  
 </Head>  
 <h1> HELLO WORLD! 
-welcome to AKASH RAMAGIRI's website 
+ *welcome to AKASH RAMAGIRI's website *
  Introducing you a new way of exploring the world 
- AR in TOURISM 
- stay tuned COMING SOON!</h1>
+ "AR in TOURISM"
+ 👉stay tuned COMING SOON!👈</h1>
 <Body background="image2.jpeg">   
   
 </Body>  
