--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@ h1 {padding: 270px 0;
 
 </style>   
 <Title>     
-website name  
+Akash Ramagiri
 </Title>  
 </Head>  
-<h1> HELLO WORLD! 
- *welcome to AKASH RAMAGIRI's website *
+<h1> HI!!
  Introducing you a new way of exploring the world 
              "AR in TOURISM"
  👉stay tuned COMING SOON!👈</h1>
