--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Akash Ramagiri
  Introducing you a new way of exploring the world 
              "AR in TOURISM"
  👉stay tuned COMING SOON!👈</h1>
-<Body background="image2.jpeg">   
+<Body background="https://www.shutterstock.com/image-photo/famous-brandenburg-gate-berlin-germany-1403763152">   
   
 </Body>  
 </Html>
