--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Akash
  Introducing you a new way of exploring the world 
              "AR in TOURISM"
  👉stay tuned COMING SOON!👈</h1>
-<Body background="https://www.dreamstime.com/stock-photo-augmented-reality-tourist-consulting-his-phone-application-image65941752">   
+<Body background="image2.jpeg">   
   
 </Body>  
 </Html>
