--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Akash
  Introducing you a new way of exploring the world 
              "AR in TOURISM"
  👉stay tuned COMING SOON!👈</h1>
-<Body background="images.jpeg">   
+<Body background="image3.jpeg">   
   
 </Body>  
 </Html>
