--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1 {padding: 270px 0;
 <h1> HI!!
  Introducing you a new way of exploring the world 
              "AR in TOURISM"
- 👉stay tuned COMING SOON!👈</h1>
+ stay tuned 👉COMING SOON!👈</h1>
 <Body background="image3.jpeg">   
   
 </Body>  
