--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
+                            <img src="assets/img/front-end.svg" alt="BACHELORS">
                             <h4>Bachelor of Technology</h4>
                             <p>2020-2024 I'm currently Persuing my 1st year of Mechanical Engineering at Vignana Bharathi Institute of Technology Hyd</p>
                         </div><!-- /.service -->
@@ -184,13 +184,13 @@
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Intermediate">
-                            <h4>Back-end</h4>
+                            <h4>INTERMEDIATE EDUCATION</h4>
                             <p>I did my intermediate in M.P.C stream (2018-2020) at Shivani junior college Hanamkonda.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
+                            <img src="assets/img/consultancy.svg" alt="SCHOOLING">
                             <h4>Primary and High school (2008-2018) Along with my academics I actively participated in extra curricular activities.</h4>
                             <p></p>
                         </div><!-- /.service -->
