--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>-</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>-</h6>
+          <h5 class="w3-opacity"><b>story writer</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
           <p>-</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>-</h6>
+          <h5 class="w3-opacity"><b>ppt presentation</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
           <p>-</p><br>
         </div>
       </div>
