--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="@akashR.jpg" style="width:100%" alt="avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
+          <div class="w3-display-bottomleft w3-container w3-text-white">
             <h2>Akash Ramagiri</h2>
           </div>
         </div>
@@ -108,13 +108,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
       <div class="w3-container">
-          <h5 class="w3-opacity"><b>Shivani junior college Hanamkonda</b></h5>
+          <h5 class="w3-opacity"><b>Shivani Junior College Hanamkonda</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - 2020</h6>
           <p>Intermediate-M.P.C</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>IMSS</b></h5>
+          <h5 class="w3-opacity"><b>India Mission Secondary School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2018</h6>
           <p>Primary and High school</p><br>
         </div>
