--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>story writer</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
-          <p>-</p>
+          <p>Started writing inspiring,funny, motivational story writing.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>ppt presentation</b></h5>
+          <h5 class="w3-opacity"><b>PPT presentation</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
-          <p>-</p><br>
+          <p>Making attractive presentations for academic criteria</p><br>
         </div>
       </div>
 
@@ -131,12 +131,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <i class="fa fa-facebook-official w3-hover-Akash Nagh"></i>
+  <i class="fa fa-instagram w3-hover-ak_ash_nagh"></i>
+  <i class="fa fa-snapchat w3-hover-Akash Nagh"></i>
+  <i class="fa fa-pinterest-p w3-hover-Akash Ramagiri"></i>
+  <i class="fa fa-twitter w3-hover-Akash Ramagiri "></i>
+  <i class="fa fa-linkedin w3-hover-Akash Ramagiri"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
