--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official Akash Nagh"></i>
-  <i class="fa fa-instagram ak_ash_nagh"></i>
-  <i class="fa fa-snapchat Akash Nagh"></i>
-  <i class="fa fa-pinterest-p Akash Ramagiri"></i>
-  <i class="fa fa-twitter Akash Ramagiri "></i>
-  <i class="fa fa-linkedin Akash Ramagiri"></i>
+  <i class="fa fa-facebook-official w3-hover-opacity">/Akash Nagh</i>
+  <i class="fa fa-instagram w3-hover-opacity">/ak_ash_nagh</i>
+  <i class="fa fa-snapchat w3-hover-opacity">/Akash Nagh</i>
+  <i class="fa fa-pinterest-p w3-hover-opacity">/Akash</i>
+  <i class="fa fa-twitter w3-hover-opacity">/Akash Ramagiri</i>
+  <i class="fa fa-linkedin w3-hover-opacity">/Akash Ramagiri</i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
