--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>story writer</b></h5>
+          <h5 class="w3-opacity"><b>Story Writing</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
-          <p>Started writing inspiring,funny,motivational stories.</p>
+          <p>Started writing inspiring,funny,motivational stories etc..</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>PPT presentation</b></h5>
+          <h5 class="w3-opacity"><b>PPT Presentation</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
           <p>Making attractive presentations for academic criteria</p><br>
         </div>
