--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>India Mission Secondary School</b></h5>
+          <h5 class="w3-opacity"><b>India Mission Secondary School Basanthnagar</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2018</h6>
           <p>Primary and High school</p><br>
         </div>
