--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Vignana Bharathi Institute of Technology Hyd</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020-2024</h6>
-          <p>Mechanical Department</p>
+          <p>Mechanical Engineering</p>
           <hr>
         </div>
       <div class="w3-container">
