--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Story Writing</b></h5>
+          <h5 class="w3-opacity"><b>Graphic Designing</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>current</h6>
-          <p>Started writing inspiring,funny,motivational stories etc..</p>
+          <p>Graphic Designer at Z.A.R.C </p>
           <hr>
         </div>
         <div class="w3-container">
